--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -31,7 +31,8 @@
 
 .content {
   flex-grow: 1;
-  padding-top: 20px;
+  padding: 20px;
+  padding-top: 40px;
 }
 
 .footer {
