--- a/src/components/Sliders/Slider/Slider.module.scss
+++ b/src/components/Sliders/Slider/Slider.module.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   height: 50px;
-  padding: 0 20px;
   margin-bottom: 15px;
 }
 
