--- a/src/components/Sliders/Sliders.module.scss
+++ b/src/components/Sliders/Sliders.module.scss
@@ -1,2 +1,4 @@
 .sliders {
+  max-width: 500px;
+  margin: 0 auto;
 }
