--- a/src/containers/Destination/Destination.module.scss
+++ b/src/containers/Destination/Destination.module.scss
@@ -72,6 +72,7 @@
 
 .itemsWrapper {
   position: relative;
+  overflow: hidden;
 }
 
 .mapWrapper {
